--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="spacer"></div>
 
 <video class="video">
-    <source src="asset/web_anim_preview.mp4" type="video/mp4">
+    <source src="asset/web_anim_preview_1.mp4" type="video/mp4">
 </video>
 <script src="script.js"></script>
 </body>
